# thermometer-client

./: Cargo.toml  README.md  test.sh
.github/workflows/: github-actions.yml
src/: main.rs
